-fix horizontal scroll

--- a/main/master.css
+++ b/main/master.css
@@ -30,6 +30,7 @@ html {
   border: solid 20px #fff;
   box-sizing: border-box;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
